# cloudfeed

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  bot.py  pyproject.toml
cloudfeed/: __init__.py  article.py
cloudfeed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cloudfeed/articles/: __init__.py  articles.py
cloudfeed/botutils/: __init__.py  botutils.py
cloudfeed/config/: config.py
cloudfeed/music/: music.py
confs/: logging.conf
docker/: Dockerfile
