[tool.poetry]
name = "cloudfeed"
version = "1.0.0"
description = "Discord bot to store and publish articles"
authors = ["João Santos <joaopns05@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9.0"
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.800"
pre-commit = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
